service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: us-affiliate-search-test
  name: us-affiliate-search-test
spec:
  type: NodePort
  ports:
  - name: "80"
    port: 80
    targetPort:  8020
  selector:
    app: us-affiliate-search-test
status:
  loadBalancer: {}
