ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "backend-pru"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/tags: Environment=PRD
  labels:
    app: us-backend-test
spec:
  rules:
  - host: affiliatesearchprd-test.backend.cindibyinkafarma.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
              name: us-affiliate-search-test
              port:
                number: 80
